--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Project done by Manas and Amit Pallauri",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node server.js",
+    "dev" : "nodemon server.js"
   },
   "repository": {
     "type": "git",
