--- a/package.json
+++ b/package.json
@@ -22,8 +22,10 @@
     "bcrypt": "^4.0.1",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.9.5",
-    "morgan": "^1.10.0"
+    "morgan": "^1.10.0",
+    "uuid": "^7.0.2"
   },
   "devDependencies": {
     "nodemon": "^2.0.2"
