--- a/package.json
+++ b/package.json
@@ -20,11 +20,14 @@
   "homepage": "https://github.com/attainu/Kitab-E-Keeda#readme",
   "dependencies": {
     "bcrypt": "^4.0.1",
+    "cloudinary": "^1.20.0",
+    "datauri": "^2.0.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.9.5",
     "morgan": "^1.10.0",
+    "multer": "^1.4.2",
     "uuid": "^7.0.2"
   },
   "devDependencies": {
