--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
   "homepage": "https://github.com/attainu/Kitab-E-Keeda#readme",
   "dependencies": {
     "bcrypt": "^4.0.1",
+    "cloudinary": "^1.20.0",
+    "datauri": "^2.0.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
@@ -27,7 +29,6 @@
     "morgan": "^1.10.0",
     "multer": "^1.4.2",
     "node-fetch": "^2.6.0",
-    "request": "^2.88.2",
     "uuid": "^7.0.2"
   },
   "devDependencies": {
