--- a/package.json
+++ b/package.json
@@ -25,10 +25,12 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
+    "messagebird": "^3.4.0",
     "mongoose": "^5.9.5",
     "morgan": "^1.10.0",
     "multer": "^1.4.2",
     "node-fetch": "^2.6.0",
+    "razorpay": "^2.0.6",
     "uuid": "^7.0.2"
   },
   "devDependencies": {
