--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "dependencies": {
     "bcrypt": "^4.0.1",
     "cloudinary": "^1.20.0",
+    "crypto-random-string": "^3.2.0",
     "datauri": "^2.0.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
@@ -30,6 +31,7 @@
     "morgan": "^1.10.0",
     "multer": "^1.4.2",
     "node-fetch": "^2.6.0",
+    "nodemailer": "^6.4.6",
     "razorpay": "^2.0.6",
     "uuid": "^7.0.2"
   },
